data/derived/comb/progs/unify/prog8055.ml.out
Characters 59-60:
  let fixpoint (f,b) = wwhile(if f = true then b else wwhile(f,b), b);;
                                                             ^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
